# tosdg-azure-ci-python-coverage-report

./: README.md  azure-pipeline.yml
example_app/: pyproject.toml
example_app/src/: project.py
